# CourseWork_4

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: Json_worker.py  Parser.py  Vacancy.py  user_interactive.py
tests/: test_user_interactive.py
