[tool.poetry]
name = "coursework_4"
version = "0.1.0"
description = ""
authors = ["Andrey Bolotin <andrejbolotin138@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-request = "^1.6.3"
hh = "^2.0.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
